------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.4 branch)

------------------------------------------------------------------------------


Interchange 5.5.1 released on YYYY-MM-DD.

See UPGRADE document for incompatible changes not listed here.

Core
----

* Fixed UserDB login issues within embedded Perl by using
  Vend::Util::string_to_ref for deserialization of carts and other 
  hashes.  

* Removed odd formatting from --add entry in interchange manual page.

* Fixed a DoS exploit. A carefully crafted HTTP POST request could cause
  an Interchange page processor to hang until it's killed by Interchange's
  periodic housekeeping routine. If several of these requests are received
  in quick succession then it could be possible to disable all of the page
  processors, rendering Interchange unresponsive for a while. Fixed by
  Kevin Walsh; pointed out by Donald Alexander.

* In &Vend::Table::DBI::set_row, avoid unwanted expansion of array when we
  have PREFER_NULL fields and number of fields passed is one. Thanks to
  Peter Ajamian for the patch and investigation.

* Added Vend::Swish2 module provided by Brian Miller <brian@endpoint.com>.
  This is superior to Vend::Swish, because instead of the awkward way to
  interface with Swish-e by running the binary it uses the Swish Perl API.

  Note: This module will replace Vend::Swish after we ensure as much backward
  compatibility as possible.

* Allow specification of one additional include directory for specific
  modules, specified like this:

  Require module Vend::Swish /usr/lib/swish-e/perl

* Terminate search if mv_min_string condition isn't met.

* Make [sql-quote] list tag to work properly with multiple lines.

UserTag
-------

* Make [save-cart] keep cart if userdb returns with an error. 

* Make [formel] call [display] on unknown types.

Filter
------
